Fix width of sticky nav on about page (and subpages)
The `ul` inside the sticky nav was covering the whole width of the
content, which was making the underlying hyperlinks and text
unreachable for the mouse. Setting the width of `ul` to `max-content`
limits its size, and thus solves the issue.

--- a/css/v2.css
+++ b/css/v2.css
@@ -424,6 +424,7 @@ nav.sidebar .currentPage a[href] {
 	}
 	nav.sidebar ul {
 		display: block;
+		width: max-content;
 	}
 	nav.sidebar a[href] {
 		display: block;
